--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <script src="https://kit.fontawesome.com/9702ef87b9.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/responsivo.css">
+
     <title>Spotify</title>
 </head>
 
@@ -15,10 +18,11 @@
 
     <div class="container">
         <nav class="sidebar">
+            <div class="top-bar">
             <div class="logo-nav">
                 <i class="fa-brands fa-spotify"></i>
-                
             </div>
+        </div>
             <div class="library-nav">
                 <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" class="Svg-biblioteca">
                     <path
@@ -54,6 +58,7 @@
                         <p>Avisaremos você sobre novos episódios.</p>
                         <button>Explore podcasts</button>
             </div>
+            
             <div class="footer-nav">
                 <a href="#">Legal</a>
                 <a href="#">Segurança e Centro de privacidade</a>
